fix the problem of overflow in profile page

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 #container{
     background-color: #2980b9c0;
     width: 80%;
